# montage

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
tests/: __init__.py  conftest.py  test_encoder_detection.py  test_encoder_settings.py  test_formatters.py  test_interactive_prompts.py  test_interactive_selection.py  test_main_workflow.py  test_photos_integration.py  test_playlist.py  test_project_management.py  test_video_compilation.py  test_video_filtering.py
