[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "montage"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "osxphotos>=0.74.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[tool.setuptools]
py-modules = ["main"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "freezegun>=1.2.0",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "deptry>=0.21.0",
    "vulture>=2.14",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest_mock.PytestMockWarning",
    "ignore:install \"ipywidgets\" for Jupyter support:UserWarning",
]

[tool.coverage.run]
source = ["main"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "UP",     # pyupgrade (modernize syntax)
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "SIM108", # Ternary operator - prefer readability
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true

[tool.deptry]
extend_exclude = ["tests", "videos", "projects"]
pep621_dev_dependency_groups = ["test", "dev"]
